feat: profile 섹션 스타일 추가

--- a/index.html
+++ b/index.html
@@ -28,28 +28,29 @@
     </section>
 
     <section id="profile">
-        <div id="nameCard">
-            <img src="image/my_img.jpg" alt="프로필 이미지">
-        </div>
-        <div id="profileText">
-            <ul>
-                <li>이름: <strong>박영민</strong></li>
-                <li>생년월일: <strong>2003-01-03</strong></li>
-                <li>주소: <strong>충청남도 천안시</strong></li>
-                <li>전화번호: <strong>010-8689-4512</strong></li>
-                <li>이메일: <strong>bym010312@naver.com</strong></li>
-                <li>학교: <strong>한남대학교 컴퓨터공학과</strong></li>
-            </ul>
-        </div>
-        <div id="social-link">
-            <ul>
-                <li><a href="" target="_blank">GitHub</a></li>
-                <li><a href="" target="_blank">Notion</a></li>
-                <li><a href="" target="_blank">Velog</a></li>
-                <li><a href="" target="_blank">Blog</a></li>
-                <li><a href="" target="_blank">LinkedIn</a></li>
-                <li><a href="" target="_blank">Instagram</a></li>
-            </ul>   
+        <div id="idCard">
+            <div id="profileImage">
+                <img src="image/my_img.jpg" alt="프로필 이미지">
+            </div>
+            <div id="profileContents">
+                <div id="profileText">
+                    <ul>
+                        <li>이름: <strong>박영민</strong></li>
+                        <li>생년월일: <strong>2003-01-03</strong></li>
+                        <li>주소: <strong>충청남도 천안시</strong></li>
+                        <li>전화번호: <strong>010-8689-4512</strong></li>
+                        <li>이메일: <strong>bym010312@naver.com</strong></li>
+                        <li>학교: <strong>한남대학교 컴퓨터공학과</strong></li>
+                    </ul>
+                </div>
+                <div id="socialLink">
+                    <ul>
+                        <li><a href="" target="_blank">GitHub</a></li>
+                        <li><a href="" target="_blank">Notion</a></li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </section>
     <section id="skill">
@@ -202,7 +203,7 @@
                     <li>직관적인 UI 구현에 열정</li>
                     <li>사용자 경험을 최우선으로 고려</li>
                 </ul>
-        </div>
+            </div>
             <div class="careerNum">
                 <span>2</span>
             </div>
