--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                 <div class="projectInfo">
                     <h3 class="projectTitle">프로젝트 1</h3>
                     <div class="tags">
-                        <span>HTML</span>
-                        <span>CSS</span>
-                        <span>JavaScript</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
+                        <span class="tag">JavaScript</span>
                     </div>
                 </div>
             </div>
@@ -148,9 +148,9 @@
                 <div class="projectInfo">
                     <h3 class="projectTitle">프로젝트 2</h3>
                     <div class="tags">
-                        <span>React</span>
-                        <span>Node.js</span>
-                        <span>MongoDB</span>
+                        <span class="tag">React</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">MongoDB</span>
                     </div>
                 </div>
             </div>
@@ -159,9 +159,9 @@
                 <div class="projectInfo">
                     <h3 class="projectTitle">프로젝트 3</h3>
                     <div class="tags">
-                        <span>Python</span>
-                        <span>Django</span>
-                        <span>MySQL</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Django</span>
+                        <span class="tag">MySQL</span>
                     </div>
                 </div>
             </div>
@@ -170,9 +170,9 @@
                 <div class="projectInfo">
                     <h3 class="projectTitle">프로젝트 4</h3>
                     <div class="tags">
-                        <span>React</span>
-                        <span>Firebase</span>
-                        <span>Redux</span>
+                        <span class="tag">React</span>
+                        <span class="tag">Firebase</span>
+                        <span class="tag">Redux</span>
                     </div>
                 </div>
             </div>
@@ -181,9 +181,9 @@
                 <div class="projectInfo">
                     <h3 class="projectTitle">프로젝트 5</h3>
                     <div class="tags">
-                        <span>HTML</span>
-                        <span>Sass</span>
-                        <span>jQuery</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">Sass</span>
+                        <span class="tag">jQuery</span>
                     </div>
                 </div>
             </div>
@@ -193,15 +193,17 @@
     <section id="career">
         <h2>희망 직무</h2>
         <div id="careerContainer">
-            <div class="careerNum">
-                <span>1</span>
-            </div>
-            <div class="careerText">
-                <h3>프론트엔드 개발자</h3>
-                <ul>
-                    <li>직관적인 UI 구현에 열정</li>
-                    <li>사용자 경험을 최우선으로 고려</li>
-                </ul>
+            <div class="careerCard">
+                <div class="careerNum">
+                    <span>1</span>
+                </div>
+                <div class="careerText">
+                    <h3>프론트엔드 개발자</h3>
+                    <ul>
+                        <li>직관적인 UI 구현에 열정</li>
+                        <li>사용자 경험을 최우선으로 고려</li>
+                    </ul>
+                </div>
             </div>
             <div class="careerNum">
                 <span>2</span>
