feat: career 섹션 디자인 추가

--- a/index.html
+++ b/index.html
@@ -205,25 +205,29 @@
                     </ul>
                 </div>
             </div>
-            <div class="careerNum">
-                <span>2</span>
+            <div class="careerCard">
+                <div class="careerNum">
+                    <span>2</span>
+                </div>
+                <div class="careerText">
+                    <h3>백엔드 개발자</h3>
+                    <ul>
+                        <li>효율적인 데이터 처리 및 API 설계</li>
+                        <li>서버 성능 최적화에 관심</li>
+                    </ul>
+                </div>
             </div>
-            <div class="careerText">
-                <h3>백엔드 개발자</h3>
-                <ul>
-                    <li>효율적인 데이터 처리 및 API 설계</li>
-                    <li>서버 성능 최적화에 관심</li>
-                </ul>
-            </div>
-            <div class="careerNum">
-                <span>3</span>
-            </div>
-            <div class="careerText">
-                <h3>풀스택 개발자</h3>
-                <ul>
-                    <li>프론트엔드와 백엔드 모두에 관심</li>
-                    <li>전체적인 시스템 아키텍처 이해</li>
-                </ul>
+            <div class="careerCard">
+                <div class="careerNum">
+                    <span>3</span>
+                </div>
+                <div class="careerText">
+                    <h3>풀스택 개발자</h3>
+                    <ul>
+                        <li>프론트엔드와 백엔드 모두에 관심</li>
+                        <li>전체적인 시스템 아키텍처 이해</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
