--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     </nav>
 
     <section id="main">
-        <img src="image/memoji_coding.png" alt="메인 이미지">
-        <div id="mainText">
-            <h1><span id="gradient">디자인하는 개발자</span><br>박영민 입니다.</h1>
-            <p>안녕하세요 저는 창의적인 문제 해결과 웹 서비스 개발에 관심이 많은 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 통해 최상의 웹 경험을 제공하는 것이 저의 목표입니다.</p>
+        <div id="mainContainer">
+            <img src="image/memoji_coding.png" alt="메인 이미지">
+            <div id="mainText">
+                <h1><span id="gradient">디자인하는 개발자</span><br>박영민 입니다.</h1>
+                <p>안녕하세요 저는 창의적인 문제 해결과 웹 서비스 개발에 관심이 많은 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 통해 최상의 웹 경험을 제공하는 것이 저의 목표입니다.
+                </p>
+            </div>
         </div>
     </section>
 
