feat: profile 섹센에 제목추가

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </section>
 
     <section id="profile">
-        <div id="idCard">
+        <h2>프로필</h2>
+        <div id="profileCard">
             <div id="profileImage">
                 <img src="image/my_img.jpg" alt="프로필 이미지">
             </div>
