docs: 프로젝트 작성

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
         <h2>프로젝트</h2>
         <div id="projectContainer">
             <div class="projectCard">
-                <img src="" alt="프로젝트 1 이미지" class="projectImage">
+                <img src="image/Techscope_logo.png" alt="테크스코프 로고" class="projectImage">
                 <div class="projectInfo">
-                    <h3 class="projectTitle">프로젝트 1</h3>
+                    <h3 class="projectTitle">TechScope: 기술 블로그 모음</h3>
                     <div class="tags">
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
@@ -147,47 +147,55 @@
                     </div>
                 </div>
             </div>
+
             <div class="projectCard">
-                <img src="" alt="프로젝트 2 이미지" class="projectImage">
+                <img src="image/chatapp.png" alt="채팅앱 이미지" class="projectImage">
+                <div class="plan"></div>
                 <div class="projectInfo">
-                    <h3 class="projectTitle">프로젝트 2</h3>
+                    <h3 class="projectTitle">실시간 채팅 애플리케이션</h3>
                     <div class="tags">
                         <span class="tag">React</span>
                         <span class="tag">Node.js</span>
+                        <span class="tag">Socket.io</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projectCard">
+                <img src="image/todo.png" alt="투두앱 이미지" class="projectImage">
+                <div class="plan"></div>
+                <div class="projectInfo">
+                    <h3 class="projectTitle">Todo 리스트 서비스</h3>
+                    <div class="tags">
+                        <span class="tag">React</span>
+                        <span class="tag">Redux</span>
+                        <span class="tag">Firebase</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projectCard">
+                <img src="image/shop.png" alt="쇼핑몰 이미지" class="projectImage">
+                <div class="plan"></div>
+                <div class="projectInfo">
+                    <h3 class="projectTitle">반응형 쇼핑몰</h3>
+                    <div class="tags">
+                        <span class="tag">Next.js</span>
+                        <span class="tag">TypeScript</span>
                         <span class="tag">MongoDB</span>
                     </div>
                 </div>
             </div>
+
             <div class="projectCard">
-                <img src="" alt="프로젝트 3 이미지" class="projectImage">
+                <img src="image/weather.png" alt="날씨앱 이미지" class="projectImage">
+                <div class="plan"></div>
                 <div class="projectInfo">
-                    <h3 class="projectTitle">프로젝트 3</h3>
+                    <h3 class="projectTitle">날씨 정보 대시보드</h3>
                     <div class="tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">Django</span>
-                        <span class="tag">MySQL</span>
-                    </div>
-                </div>
-            </div>
-            <div class="projectCard">
-                <img src="" alt="프로젝트 4 이미지" class="projectImage">
-                <div class="projectInfo">
-                    <h3 class="projectTitle">프로젝트 4</h3>
-                    <div class="tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Firebase</span>
-                        <span class="tag">Redux</span>
-                    </div>
-                </div>
-            </div>
-            <div class="projectCard">
-                <img src="" alt="프로젝트 5 이미지" class="projectImage">
-                <div class="projectInfo">
-                    <h3 class="projectTitle">프로젝트 5</h3>
-                    <div class="tags">
-                        <span class="tag">HTML</span>
-                        <span class="tag">Sass</span>
-                        <span class="tag">jQuery</span>
+                        <span class="tag">Vue.js</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">OpenAPI</span>
                     </div>
                 </div>
             </div>
