--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="profile">
         <h2>프로필</h2>
-        <div id="profileCard">
+        <div id="profileCard" class="card">
             <div id="profileImage">
                 <img src="image/my_img.jpg" alt="프로필 이미지">
             </div>
@@ -59,7 +59,7 @@
     <section id="skill">
         <h2>기술 스택</h2>
         <div id="cardContainer">
-            <div class="skillCard">
+            <div class="skillCard card">
                 <h3>프론트엔드</h3>
                 <div class="skillItem">
                     <p>HTML 5</p>
@@ -98,7 +98,7 @@
                     <span class="percent">10%</span>
                 </div>
             </div>
-            <div class="skillCard">
+            <div class="skillCard card">
                 <h3>백엔드</h3>
                 <div class="skillItem">
                     <p>Node.js</p>
@@ -119,7 +119,7 @@
                     <span class="percent">40%</span>
                 </div>
             </div>
-            <div class="skillCard">
+            <div class="skillCard card">
                 <h3>기타</h3>
                 <div class="skillItem">
                     <p>Git</p>
@@ -136,7 +136,8 @@
     <section id="project">
         <h2>프로젝트</h2>
         <div id="projectContainer">
-            <div class="projectCard">
+            <div class="projectCard card" data-title="TechScope: 기술 블로그 모음"
+                data-description="기술 블로그 링크를 모아 한 곳에서 볼 수 있는 웹사이트입니다." data-github-url="http://github.com/bym010312/bym010312">
                 <img src="image/Techscope_logo.png" alt="테크스코프 로고" class="projectImage">
                 <div class="projectInfo">
                     <h3 class="projectTitle">TechScope: 기술 블로그 모음</h3>
@@ -148,7 +149,8 @@
                 </div>
             </div>
 
-            <div class="projectCard">
+            <div class="projectCard card" data-title="실시간 채팅 애플리케이션"
+                data-description="React와 Node.js, Socket.io를 사용한 실시간 채팅 서비스입니다." data-githubUrl="#">
                 <img src="image/chatapp.png" alt="채팅앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -161,7 +163,8 @@
                 </div>
             </div>
 
-            <div class="projectCard">
+            <div class="projectCard card" data-title="Todo 리스트 서비스"
+                data-description="React, Redux, Firebase를 활용한 Todo 리스트 웹 애플리케이션입니다." data-githubUrl="#">
                 <img src="image/todo.png" alt="투두앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -174,7 +177,8 @@
                 </div>
             </div>
 
-            <div class="projectCard">
+            <div class="projectCard card" data-title="반응형 쇼핑몰"
+                data-description="Next.js와 TypeScript, MongoDB를 이용한 반응형 쇼핑몰 웹사이트입니다." data-githubUrl="#">
                 <img src="image/shop.png" alt="쇼핑몰 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -187,7 +191,8 @@
                 </div>
             </div>
 
-            <div class="projectCard">
+            <div class="projectCard card" data-title="날씨 정보 대시보드"
+                data-description="Vue.js와 Node.js, OpenAPI를 활용한 날씨 정보 대시보드입니다." data-githubUrl="#">
                 <img src="image/weather.png" alt="날씨앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -205,7 +210,7 @@
     <section id="career">
         <h2>희망 직무</h2>
         <div id="careerContainer">
-            <div class="careerCard">
+            <div class="careerCard card">
                 <div class="careerNum">
                     <span>1</span>
                 </div>
@@ -217,7 +222,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="careerCard">
+            <div class="careerCard card">
                 <div class="careerNum">
                     <span>2</span>
                 </div>
@@ -229,7 +234,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="careerCard">
+            <div class="careerCard card">
                 <div class="careerNum">
                     <span>3</span>
                 </div>
@@ -243,6 +248,17 @@
             </div>
         </div>
     </section>
+
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3></h3>
+            <p></p>
+            <button>GitHub</button>
+        </div>
+
+    </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
