--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 </div>
                 <div id="socialLink">
                     <ul>
-                        <li><a href="" target="_blank">GitHub</a></li>
-                        <li><a href="" target="_blank">Notion</a></li>
+                        <li><a href="" target="_blank" class="button" >GitHub</a></li>
+                        <li><a href="" target="_blank" class="button">Notion</a></li>
                     </ul>
                 </div>
             </div>
@@ -137,7 +137,9 @@
         <h2>프로젝트</h2>
         <div id="projectContainer">
             <div class="projectCard card" data-title="TechScope: 기술 블로그 모음"
-                data-description="기술 블로그 링크를 모아 한 곳에서 볼 수 있는 웹사이트입니다." data-github-url="http://github.com/bym010312/bym010312">
+                data-description="기술 블로그 링크를 모아 한 곳에서 볼 수 있는 웹사이트입니다."
+                data-youtube-url="https://www.youtube.com/embed/o64thn1us6k"
+                data-github-url="http://github.com/bym010312/bym010312">
                 <img src="image/Techscope_logo.png" alt="테크스코프 로고" class="projectImage">
                 <div class="projectInfo">
                     <h3 class="projectTitle">TechScope: 기술 블로그 모음</h3>
@@ -150,7 +152,7 @@
             </div>
 
             <div class="projectCard card" data-title="실시간 채팅 애플리케이션"
-                data-description="React와 Node.js, Socket.io를 사용한 실시간 채팅 서비스입니다." data-githubUrl="#">
+                data-description="React와 Node.js, Socket.io를 사용한 실시간 채팅 서비스입니다.">
                 <img src="image/chatapp.png" alt="채팅앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -164,7 +166,7 @@
             </div>
 
             <div class="projectCard card" data-title="Todo 리스트 서비스"
-                data-description="React, Redux, Firebase를 활용한 Todo 리스트 웹 애플리케이션입니다." data-githubUrl="#">
+                data-description="React, Redux, Firebase를 활용한 Todo 리스트 웹 애플리케이션입니다.">
                 <img src="image/todo.png" alt="투두앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -178,7 +180,7 @@
             </div>
 
             <div class="projectCard card" data-title="반응형 쇼핑몰"
-                data-description="Next.js와 TypeScript, MongoDB를 이용한 반응형 쇼핑몰 웹사이트입니다." data-githubUrl="#">
+                data-description="Next.js와 TypeScript, MongoDB를 이용한 반응형 쇼핑몰 웹사이트입니다.">
                 <img src="image/shop.png" alt="쇼핑몰 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -192,7 +194,7 @@
             </div>
 
             <div class="projectCard card" data-title="날씨 정보 대시보드"
-                data-description="Vue.js와 Node.js, OpenAPI를 활용한 날씨 정보 대시보드입니다." data-githubUrl="#">
+                data-description="Vue.js와 Node.js, OpenAPI를 활용한 날씨 정보 대시보드입니다.">
                 <img src="image/weather.png" alt="날씨앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
@@ -254,7 +256,7 @@
             <span class="close">&times;</span>
             <h3></h3>
             <p></p>
-            <button>GitHub</button>
+            <button class="button">GitHub</button>
         </div>
 
     </div>
