--- a/index.html
+++ b/index.html
@@ -11,27 +11,35 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#main">홈</a></li>
-            <li><a href="#profile">소개</a></li>
-            <li><a href="#skill">기술</a></li>
-            <li><a href="#project">프로젝트</a></li>
-            <li><a href="#career">희망직무</a></li>
+            <li><a href="#main" class="lang" data-lang-ko="홈" data-lang-en="Home">홈</a></li>
+            <li><a href="#profile" class="lang" data-lang-ko="소개" data-lang-en="Profile">소개</a></li>
+            <li><a href="#skill" class="lang" data-lang-ko="기술" data-lang-en="Skills">기술</a></li>
+            <li><a href="#project" class="lang" data-lang-ko="프로젝트" data-lang-en="Projects">프로젝트</a></li>
+            <li><a href="#license" class="lang" data-lang-ko="자격증" data-lang-en="Licenses">자격증</a></li>
+            <li><a href="#career" class="lang" data-lang-ko="희망직무" data-lang-en="Desired Position">희망직무</a></li>
         </ul>
+        <div id="languageToggle"><button onclick="toggleLanguage()">KR/EN</button></div>
     </nav>
 
     <section id="main">
         <div id="mainContainer">
             <img src="image/memoji_coding.png" alt="메인 이미지">
             <div id="mainText">
-                <h1><span id="gradient">디자인하는 개발자</span><br>박영민 입니다.</h1>
-                <p>안녕하세요 저는 창의적인 문제 해결과 웹 서비스 개발에 관심이 많은 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 통해 최상의 웹 경험을 제공하는 것이 저의 목표입니다.
-                </p>
+                <h1><span id="gradient" class="lang" data-lang-ko="디자인하는 개발자" data-lang-en="Creative Developer">디자인하는
+                        개발자</span><br>
+                    <span class="lang" data-lang-ko="박영민 입니다." data-lang-en="I'm Youngmin Park.">박영민 입니다.</span>
+                </h1>
+                <p class="lang"
+                    data-lang-ko="안녕하세요 저는 창의적인 문제 해결과 웹 서비스 개발에 관심이 많은 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 통해 최상의 웹 경험을 제공하는 것이 저의 목표입니다."
+                    data-lang-en="Hello! I’m a developer passionate about creative problem solving and web development. My goal is to deliver the best web experience through user-centered design and efficient coding.">
+                    안녕하세요 저는 창의적인 문제 해결과 웹 서비스 개발에 관심이 많은 개발자입니다. 사용자 중심의 디자인과 효율적인 코드 작성을 통해 최상의 웹 경험을 제공하는 것이 저의
+                    목표입니다.</p>
             </div>
         </div>
     </section>
 
     <section id="profile">
-        <h2>프로필</h2>
+        <h2 class="lang" data-lang-ko="프로필" data-lang-en="Profile">프로필</h2>
         <div id="profileCard" class="card">
             <div id="profileImage">
                 <img src="image/my_img.jpg" alt="프로필 이미지">
@@ -39,17 +47,40 @@
             <div id="profileContents">
                 <div id="profileText">
                     <ul>
-                        <li>이름: <strong>박영민</strong></li>
-                        <li>생년월일: <strong>2003-01-03</strong></li>
-                        <li>주소: <strong>충청남도 천안시</strong></li>
-                        <li>전화번호: <strong>010-8689-4512</strong></li>
-                        <li>이메일: <strong>bym010312@naver.com</strong></li>
-                        <li>학교: <strong>한남대학교 컴퓨터공학과</strong></li>
+                        <li>
+                            <span class="lang" data-lang-ko="이름: " data-lang-en="Name: ">이름: </span>
+                            <strong class="lang" data-lang-ko="박영민" data-lang-en="Youngmin Park">박영민</strong>
+                        </li>
+                        <li>
+                            <span class="lang" data-lang-ko="생년월일: " data-lang-en="Birthday: ">생년월일: </span>
+                            <strong class="lang" data-lang-ko="2003-01-03"
+                                data-lang-en="Jan 3, 2003">2003-01-03</strong>
+                        </li>
+                        <li>
+                            <span class="lang" data-lang-ko="주소: " data-lang-en="Address: ">주소: </span>
+                            <strong class="lang" data-lang-ko="충청남도 천안시"
+                                data-lang-en="Cheonan-si, Chungcheongnam-do">충청남도 천안시</strong>
+                        </li>
+                        <li>
+                            <span class="lang" data-lang-ko="전화번호: " data-lang-en="Phone: ">전화번호: </span>
+                            <strong class="lang" data-lang-ko="010-8689-4512"
+                                data-lang-en="+82-10-8689-4512">010-8689-4512</strong>
+                        </li>
+                        <li>
+                            <span class="lang" data-lang-ko="이메일: " data-lang-en="Email: ">이메일: </span>
+                            <strong class="lang" data-lang-ko="bym010312@naver.com"
+                                data-lang-en="bym010312@naver.com">bym010312@naver.com</strong>
+                        </li>
+                        <li>
+                            <span class="lang" data-lang-ko="학교: " data-lang-en="University: ">학교: </span>
+                            <strong class="lang" data-lang-ko="한남대학교 컴퓨터공학과"
+                                data-lang-en="Hannam Univ., Computer Engineering">한남대학교 컴퓨터공학과</strong>
+                        </li>
                     </ul>
                 </div>
                 <div id="socialLink">
                     <ul>
-                        <li><a href="" target="_blank" class="button" >GitHub</a></li>
+                        <li><a href="" target="_blank" class="button">GitHub</a></li>
                         <li><a href="" target="_blank" class="button">Notion</a></li>
                     </ul>
                 </div>
@@ -57,10 +88,10 @@
         </div>
     </section>
     <section id="skill">
-        <h2>기술 스택</h2>
+        <h2 class="lang" data-lang-ko="기술 스택" data-lang-en="Skills">기술 스택</h2>
         <div id="cardContainer">
             <div class="skillCard card">
-                <h3>프론트엔드</h3>
+                <h3 class="lang" data-lang-ko="프론트엔드" data-lang-en="Frontend">프론트엔드</h3>
                 <div class="skillItem">
                     <p>HTML 5</p>
                     <div>
@@ -99,7 +130,7 @@
                 </div>
             </div>
             <div class="skillCard card">
-                <h3>백엔드</h3>
+                <h3 class="lang" data-lang-ko="백엔드" data-lang-en="Backend">백엔드</h3>
                 <div class="skillItem">
                     <p>Node.js</p>
                     <div>
@@ -120,29 +151,48 @@
                 </div>
             </div>
             <div class="skillCard card">
-                <h3>기타</h3>
+                <h3 class="lang" data-lang-ko="기타" data-lang-en="Others">기타</h3>
                 <div class="skillItem">
                     <p>Git</p>
                     <div>
                         <div class="progressBar">
-                            <div class="progress" style="width: 40%;"></div>
+                            <div class="progress" style="width: 30%;"></div>
                         </div>
                     </div>
-                    <span class="percent">40%</span>
+                    <span class="percent">30%</span>
+                </div>
+                <div class="skillItem">
+                    <p>Figma</p>
+                    <div>
+                        <div class="progressBar">
+                            <div class="progress" style="width: 60%;"></div>
+                        </div>
+                    </div>
+                    <span class="percent">60%</span>
+                </div>
+                <div class="skillItem">
+                    <p>Photoshop</p>
+                    <div>
+                        <div class="progressBar">
+                            <div class="progress" style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <span class="percent">70%</span>
                 </div>
             </div>
         </div>
     </section>
     <section id="project">
-        <h2>프로젝트</h2>
+        <h2 class="lang" data-lang-ko="프로젝트" data-lang-en="Projects">프로젝트</h2>
         <div id="projectContainer">
             <div class="projectCard card" data-title="TechScope: 기술 블로그 모음"
                 data-description="기술 블로그 링크를 모아 한 곳에서 볼 수 있는 웹사이트입니다."
-                data-youtube-url="https://www.youtube.com/embed/o64thn1us6k"
+                data-youtube-url="https://www.youtube.com/embed/WaqKmnAQ3RU"
                 data-github-url="http://github.com/bym010312/bym010312">
                 <img src="image/Techscope_logo.png" alt="테크스코프 로고" class="projectImage">
                 <div class="projectInfo">
-                    <h3 class="projectTitle">TechScope: 기술 블로그 모음</h3>
+                    <h3 class="projectTitle lang" data-lang-ko="TechScope: 기술 블로그 모음"
+                        data-lang-en="TechScope: Tech Blog Collection">TechScope: 기술 블로그 모음</h3>
                     <div class="tags">
                         <span class="tag">HTML</span>
                         <span class="tag">CSS</span>
@@ -156,7 +206,8 @@
                 <img src="image/chatapp.png" alt="채팅앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
-                    <h3 class="projectTitle">실시간 채팅 애플리케이션</h3>
+                    <h3 class="projectTitle lang" data-lang-ko="실시간 채팅 애플리케이션" data-lang-en="Real-time Chat App">실시간 채팅
+                        애플리케이션</h3>
                     <div class="tags">
                         <span class="tag">React</span>
                         <span class="tag">Node.js</span>
@@ -170,7 +221,8 @@
                 <img src="image/todo.png" alt="투두앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
-                    <h3 class="projectTitle">Todo 리스트 서비스</h3>
+                    <h3 class="projectTitle lang" data-lang-ko="Todo 리스트 서비스" data-lang-en="Todo List Service">Todo 리스트
+                        서비스</h3>
                     <div class="tags">
                         <span class="tag">React</span>
                         <span class="tag">Redux</span>
@@ -184,7 +236,8 @@
                 <img src="image/shop.png" alt="쇼핑몰 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
-                    <h3 class="projectTitle">반응형 쇼핑몰</h3>
+                    <h3 class="projectTitle lang" data-lang-ko="반응형 쇼핑몰" data-lang-en="Responsive Shopping Mall">반응형 쇼핑몰
+                    </h3>
                     <div class="tags">
                         <span class="tag">Next.js</span>
                         <span class="tag">TypeScript</span>
@@ -198,7 +251,8 @@
                 <img src="image/weather.png" alt="날씨앱 이미지" class="projectImage">
                 <div class="plan"></div>
                 <div class="projectInfo">
-                    <h3 class="projectTitle">날씨 정보 대시보드</h3>
+                    <h3 class="projectTitle lang" data-lang-ko="날씨 정보 대시보드" data-lang-en="Weather Dashboard">날씨 정보 대시보드
+                    </h3>
                     <div class="tags">
                         <span class="tag">Vue.js</span>
                         <span class="tag">Node.js</span>
@@ -207,44 +261,65 @@
                 </div>
             </div>
         </div>
-
+    </section>
+    <section id="license">
+        <h2 class="lang" data-lang-ko="자격증" data-lang-en="Licenses">자격증</h2>
+        <div class="licenseCard card" data-title="정보처리기능사" data-image="image/자격증 확인서.png" style="cursor: pointer;">
+            <div class="licenseInfo">
+                <h3 class="lang" data-lang-ko="정보처리기능사" data-lang-en="Computer Specialist in Information Processing">
+                    정보처리기능사</h3>
+                <p class="licenseDate">
+                    <span class="lang" data-lang-ko="합격일자: " data-lang-en="Pass Date: ">합격일자: </span>
+                    <strong class="lang" data-lang-ko="2024.06.14" data-lang-en="June 14, 2024">2024.06.14</strong>
+                </p>
+                <p class="licenseIssuer">
+                    <span class="lang" data-lang-ko="발급기관: " data-lang-en="Issuer: ">발급기관: </span>
+                    <strong class="lang" data-lang-ko="한국산업인력공단"
+                        data-lang-en="Human Resources Development Service of Korea">한국산업인력공단</strong>
+                </p>
+            </div>
+        </div>
     </section>
     <section id="career">
-        <h2>희망 직무</h2>
+        <h2 class="lang" data-lang-ko="희망 직무" data-lang-en="Desired Position">희망 직무</h2>
         <div id="careerContainer">
             <div class="careerCard card">
-                <div class="careerNum">
-                    <span>1</span>
-                </div>
                 <div class="careerText">
-                    <h3>프론트엔드 개발자</h3>
+                    <h3 class="lang" data-lang-ko="프론트엔드 개발자" data-lang-en="Frontend Developer">프론트엔드 개발자</h3>
                     <ul>
-                        <li>직관적인 UI 구현에 열정</li>
-                        <li>사용자 경험을 최우선으로 고려</li>
+                        <li class="lang" data-lang-ko="사용자에게 직관적이고 반응성 높은 UI를 제공하는 데 열정을 가지고 있습니다"
+                            data-lang-en="Dedicated to delivering intuitive and responsive interfaces that prioritize user experience.">
+                            사용자에게 직관적이고 반응성 높은 UI를 제공하는 데 열정을 가지고 있습니다.</li>
+                        <li class="lang" data-lang-ko="사용자 경험(UX)을 최우선으로 고려하며, 시각적 완성도와 기능적 편의성을 동시에 추구합니다." 
+                        data-lang-en="I strive to balance visual refinement with functional clarity, ensuring accessible and engaging user interactions.">
+                        사용자 경험(UX)을 최우선으로 고려하며, 시각적 완성도와 기능적 편의성을 동시에 추구합니다.</li>
                     </ul>
                 </div>
             </div>
             <div class="careerCard card">
-                <div class="careerNum">
-                    <span>2</span>
-                </div>
                 <div class="careerText">
-                    <h3>백엔드 개발자</h3>
+                    <h3 class="lang" data-lang-ko="백엔드 개발자" data-lang-en="Backend Developer">백엔드 개발자</h3>
                     <ul>
-                        <li>효율적인 데이터 처리 및 API 설계</li>
-                        <li>서버 성능 최적화에 관심</li>
+                        <li class="lang" data-lang-ko="효율적인 데이터 처리와 구조화된 API 설계를 통해 안정적인 서비스 환경을 구현하고자 합니다."
+                            data-lang-en="Focused on efficient data processing and structured API design to build reliable service environments.">
+                            효율적인 데이터 처리와 구조화된 API 설계를 통해 안정적인 서비스 환경을 구현하고자 합니다.</li>
+                        <li class="lang" data-lang-ko="확장성과 성능 최적화를 지속적으로 고민하며, 견고한 서버 아키텍처 구축에 관심을 가지고 있습니다."
+                            data-lang-en="I am particularly interested in scalability and performance optimization, with a commitment to robust server architecture.
+">
+확장성과 성능 최적화를 지속적으로 고민하며, 견고한 서버 아키텍처 구축에 관심을 가지고 있습니다.</li>
                     </ul>
                 </div>
             </div>
             <div class="careerCard card">
-                <div class="careerNum">
-                    <span>3</span>
-                </div>
                 <div class="careerText">
-                    <h3>풀스택 개발자</h3>
+                    <h3 class="lang" data-lang-ko="UX/UI 디자이너" data-lang-en="UX/UI Designer">UX/UI 디자이너</h3>
                     <ul>
-                        <li>프론트엔드와 백엔드 모두에 관심</li>
-                        <li>전체적인 시스템 아키텍처 이해</li>
+                        <li class="lang" data-lang-ko="사용자 중심의 사고를 바탕으로 명확하고 일관된 인터페이스를 설계합니다."
+                            data-lang-en="Designing clear and consistent interfaces based on user-centered thinking.">
+                            사용자 중심의 사고를 바탕으로 명확하고 일관된 인터페이스를 설계합니다.</li>
+                        <li class="lang" data-lang-ko="데이터 기반의 인사이트와 반복적인 개선 과정을 통해 서비스의 전반적인 사용자 경험을 향상시키는 데 집중합니다."
+                            data-lang-en="By leveraging data-driven insights and iterative improvements, I aim to enhance the overall value and usability of digital services.">
+                            데이터 기반의 인사이트와 반복적인 개선 과정을 통해 서비스의 전반적인 사용자 경험을 향상시키는 데 집중합니다.</li>
                     </ul>
                 </div>
             </div>
